--- a/122.html
+++ b/122.html
@@ -277,7 +277,7 @@
       <div class="sig-header">
   <!-- شعار وحسابات الشركة -->
   <div class="sig-logo-container">
-    <img src="logo3.png" class="sig-logo" alt="Logo">
+    <img src="https://i.postimg.cc/9wphn2wS/9wphn2wS.png" class="sig-logo" alt="Logo">
     <div class="social-icons">
       <a href="https://www.linkedin.com/company/qscksa" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png"></a>
       <a href="https://x.com/qsc_it" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png"></a>
