--- a/122.html
+++ b/122.html
@@ -277,7 +277,7 @@
       <div class="sig-header">
   <!-- شعار وحسابات الشركة -->
   <div class="sig-logo-container">
-    <img src="https://github.com/Haneen1x/email-signature/blob/555d2c4a646aca57336ba8f52768f7a4f05a6ee7/logo3.png" class="sig-logo" alt="Logo">
+    <img src="https://raw.githubusercontent.com/Haneen1x/email-signature/555d2c4a646aca57336ba8f52768f7a4f05a6ee7/logo3.png" class="sig-logo" alt="Logo">
     <div class="social-icons">
       <a href="https://www.linkedin.com/company/qscksa" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png"></a>
       <a href="https://x.com/qsc_it" target="_blank"><img src="https://github.com/Haneen1x/email-signature/blob/648029b43be842adff35d423373682af5ec1eff3/twitter%20(2).png"></a>
