--- a/122.html
+++ b/122.html
@@ -280,7 +280,7 @@
     <img src="https://i.postimg.cc/9wphn2wS/9wphn2wS.png" class="sig-logo" alt="Logo">
     <div class="social-icons">
       <a href="https://www.linkedin.com/company/qscksa" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png"></a>
-      <a href="https://x.com/qsc_it" target="_blank"><img src="https://github.com/Haneen1x/email-signature/blob/648029b43be842adff35d423373682af5ec1eff3/twitter%20(2).png"></a>
+      <a href="https://x.com/qsc_it" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png"></a>
       <a href="https://www.instagram.com/qscksa" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png"></a>
       <a href="https://www.tiktok.com/@qsc_it" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png"></a>
     </div>
